# python-idosell

./: .pre-commit-config.yaml  pyproject.toml
examples/: Example ISF 2.0 Manifest.xml  ISF 2.1 request example.xml  ISF 2.1 response example.xml  categories.xml  categories.xsd  full.xml  full.xsd  full_change2022-02-16T10-33-11.xml  gateway.xml  gateway.xsd  light.xml  light.xsd  parameters.xml  parameters.xsd  preset.xml  preset.xsd  producers.xml  producers.xsd  series.xml  series.xsd  stocks.xml  stocks.xsd  units.xml  units.xsd  warranties.xml  warranties.xsd
idosell/iof/: full.py  gateway.py  shared.py
