[tool.poetry]
name = "python-idosell"
version = "0.0.1"
description = "Python implementation of IdoSell's e-commerce formats."
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dekoza/python-idosell"
packages = [
  { include = "idosell" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-xml = "^2.9.0"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"
ipython = "^8.22.2"
pre-commit-hooks = "^4.5.0"
rich = "^13.7.1"
lxml = "^5.2.0"
xsdata-pydantic = {version = "^22.10", extras = ["cli"]}
xsdata = {version = "^24.3.1", extras = ["cli"]}

[tool.mypy]
plugins = [
  "pydantic_xml.mypy"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
